Change a image src

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <!-- About Fruits Shoop start here -->
             <div class="about_Fruits_Shop" id="about">
                 <div class="about_img">
-                    <img src="/Image/frootsStor.jpg" alt="about_Shoop" />
+                    <img src="./Image/frootsStor.jpg" alt="about_Shoop" />
                 </div>
 
                 <div class="about_details">
